# Light-Field-Depth-Estimation-Code

./: README.md
EPINET/: pfm2png_batch.bat
EPINET/epinet-master/: EPINET_plusX_9conv22_save.py
LF_DEPTH_SHADING-master/: README.md  README.txt
LF_DEPTH_SHADING-master/Code/: ALM_CONFIDENCE.m  CALCULATE_SHADING.m  COMBINE_RESPONSES.m  CONNECTEDSETS.m  CONVKERNEL2MATRIX.m  DEPTH2NORMALSGRADIENT.m  DEPTH2POINTS_MATRIX.m  (+44 more)
Light_Field_Depth-master/: README.md
Spinning-Parallelogram-Operator-master/: InputImage.m  SPO.m  demo.m  showCost.m
depth-from-defocus-and-correspondence-master/: compute_LFdepth.m  demo_run.m  depth_output.mat
remotesensingProject-master/: README.md
remotesensingProject-master/RSLightFields/: CMakeLists.txt
remotesensingProject-master/RSLightFields/include/: rslf.hpp  rslf_depth_computation.hpp  rslf_depth_computation_core.hpp  rslf_fine_to_coarse.hpp  rslf_fine_to_coarse_core.hpp  rslf_interpolation.hpp  rslf_io.hpp  rslf_kernels.hpp  rslf_plot.hpp  rslf_types.hpp
remotesensingProject-master/RSLightFields/src/: rslf_depth_computation_core.cpp  rslf_fine_to_coarse_core.cpp  rslf_io.cpp  rslf_kernels.cpp  rslf_plot.cpp  rslf_types.cpp
remotesensingProject-master/RSLightFields/tests/: test_build_row_epi.cpp  test_build_row_epi_mansion_resized.cpp  test_build_row_epi_skysat_rectified_1.cpp  test_build_row_epi_skysat_rectified_18.cpp  test_depth_computation.cpp  test_depth_computation_2d.cpp  test_depth_computation_pile.cpp  test_fine_to_coarse.cpp  test_read_tiff.cpp  test_skysat_rectified_gallery.cpp
rprf/: install_MCR.txt  run_demo.bat
(+476 files in other folders)
